ci run updated 1 on push